# QueryCAD

./: CMakeLists.txt  README.md
.github/workflows/: workflow.yml
data/: test.step
src/: QueryCAD_2D.cpp  QueryCAD_2D.hpp
tests/: CMakeLists.txt  QueryCAD_2DTest.cpp
